mobile version fix

--- a/css/main.css
+++ b/css/main.css
@@ -70,6 +70,7 @@ button:hover {
 
 .end__screen {
   position: fixed;
+  top: 0;
   width: 100%;
   min-height: 100%;
   padding: 20px;
@@ -86,6 +87,7 @@ button:hover {
   color: #cccccc;
   margin-top: 30px;
   font-size: 2rem;
+  text-align: center;
 }
 
 .end__screen h2.win {
